[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/brick.png" type="Texture" id=1]
[ext_resource path="res://script/player.gd" type="Script" id=2]
[ext_resource path="res://scene/halfLeaper.tscn" type="PackedScene" id=3]
[ext_resource path="res://script/sliders/slider.gd" type="Script" id=4]
[ext_resource path="res://script/sliders/controlNode.gd" type="Script" id=5]
[ext_resource path="res://script/sliders/time2.gd" type="Script" id=6]
[ext_resource path="res://script/sliders/phase.gd" type="Script" id=7]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="TileSet" id=2]
0/name = "brick.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[node name="world" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 25.6375, 12.7378 )
color = Color( 0.435294, 0.411765, 0.411765, 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 1376256, 0, 0, 1376257, 0, 0, 1376258, 0, 0, 1376259, 0, 0, 1376260, 0, 0, 1376261, 0, 0, 1376262, 0, 0, 1376263, 0, 0, 1376264, 0, 0, 1376265, 0, 0, 1376266, 0, 0, 1376267, 0, 0, 1376268, 0, 0, 1376269, 0, 0, 1376270, 0, 0, 1376271, 0, 0, 1376272, 0, 0, 1376273, 0, 0, 1376274, 0, 0, 1376275, 0, 0, 1376276, 0, 0, 1376277, 0, 0, 1376278, 0, 0, 1376279, 0, 0, 1376280, 0, 0, 1376281, 0, 0, 1376282, 0, 0, 1376283, 0, 0, 1376284, 0, 0, 1376285, 0, 0, 1376286, 0, 0, 1376287, 0, 0, 1376288, 0, 0, 1376289, 0, 0, 1376290, 0, 0, 1376291, 0, 0, 1376292, 0, 0, 1376293, 0, 0, 1376294, 0, 0, 1376295, 0, 0, 1376296, 0, 0, 1376297, 0, 0, 1376298, 0, 0, 1376299, 0, 0, 1376300, 0, 0, 1376301, 0, 0, 1376302, 0, 0, 1376303, 0, 0, 1376304, 0, 0, 1376305, 0, 0, 1376306, 0, 0, 1376307, 0, 0, 1376308, 0, 0, 1376309, 0, 0, 1376310, 0, 0, 1376311, 0, 0, 1376312, 0, 0, 1376313, 0, 0, 1376314, 0, 0, 1376315, 0, 0, 1376316, 0, 0, 1376317, 0, 0, 1376318, 0, 0, 1376319, 0, 0 )

[node name="player" type="KinematicBody2D" parent="."]
position = Vector2( 352, 328 )
script = ExtResource( 2 )
height1 = 200.0
peakTime1 = 0.65
peakTime2 = 0.2
phase2 = 0.49

[node name="Sprite" type="Sprite" parent="player"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
shape = SubResource( 3 )

[node name="RayCast2D" type="RayCast2D" parent="player"]

[node name="halfLeaper" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 359, 328 )

[node name="controlNode" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )
player_path = NodePath("../player")

[node name="time1" type="Control" parent="controlNode"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )
player_nodepath = NodePath("../../player")

[node name="Label" type="Label" parent="controlNode/time1"]
margin_left = 44.0
margin_top = 146.0
margin_right = 86.0
margin_bottom = 160.0
text = "time_1"

[node name="HSlider" type="HSlider" parent="controlNode/time1"]
margin_left = 37.0
margin_top = 167.0
margin_right = 137.0
margin_bottom = 183.0
min_value = 0.1
max_value = 2.0
step = 0.01
value = 0.5
tick_count = 100

[node name="time2" type="Control" parent="controlNode"]
margin_left = -2.0
margin_top = 41.0
margin_right = 38.0
margin_bottom = 81.0
script = ExtResource( 6 )
player_nodepath = NodePath("../../player")

[node name="Label" type="Label" parent="controlNode/time2"]
margin_left = 44.0
margin_top = 146.0
margin_right = 86.0
margin_bottom = 160.0
text = "time_2"

[node name="HSlider" type="HSlider" parent="controlNode/time2"]
margin_left = 37.0
margin_top = 167.0
margin_right = 137.0
margin_bottom = 183.0
min_value = 0.1
max_value = 2.0
step = 0.01
value = 0.1
tick_count = 100

[node name="height1" type="Control" parent="controlNode"]
margin_left = 160.0
margin_top = 168.0
margin_right = 200.0
margin_bottom = 208.0
script = ExtResource( 4 )
player_nodepath = NodePath("../../player")

[node name="Label" type="Label" parent="controlNode/height1"]
margin_left = 14.0
margin_top = -20.0
margin_right = 66.0
margin_bottom = -6.0
text = "height_1"

[node name="HSlider" type="HSlider" parent="controlNode/height1"]
margin_right = 100.0
margin_bottom = 16.0
min_value = 16.0
max_value = 160.0
step = 0.01
value = 16.0
tick_count = 100

[node name="phase" type="Control" parent="controlNode"]
margin_left = 168.0
margin_top = 208.0
margin_right = 208.0
margin_bottom = 248.0
script = ExtResource( 7 )
playerNode_path = NodePath("../../player")

[node name="Label" type="Label" parent="controlNode/phase"]
margin_left = 14.0
margin_top = -20.0
margin_right = 66.0
margin_bottom = -6.0
text = "phase"

[node name="HSlider" type="HSlider" parent="controlNode/phase"]
margin_right = 100.0
margin_bottom = 16.0
max_value = 5.0
step = 0.01
tick_count = 100

[node name="startStop" type="Control" parent="controlNode"]
margin_right = 40.0
margin_bottom = 40.0

[node name="CheckButton" type="CheckButton" parent="controlNode/startStop"]
margin_left = 80.0
margin_top = 80.0
margin_right = 230.0
margin_bottom = 120.0
text = "Run"

[node name="displayNode" type="Control" parent="."]
margin_left = 296.0
margin_top = 360.0
margin_right = 336.0
margin_bottom = 400.0

[node name="peakTime1" type="Label" parent="displayNode"]
margin_right = 40.0
margin_bottom = 14.0
text = "peak_time _1"

[node name="peakTime2" type="Label" parent="displayNode"]
margin_top = 16.0
margin_right = 84.0
margin_bottom = 30.0
text = "peak_time _1"

[node name="gravity_1" type="Label" parent="displayNode"]
margin_top = 32.0
margin_right = 63.0
margin_bottom = 46.0
text = "gravity_1"

[node name="gravity_2" type="Label" parent="displayNode"]
margin_top = 48.0
margin_right = 56.0
margin_bottom = 62.0
text = "gravity_2"

[node name="phase" type="Label" parent="displayNode"]
margin_top = 64.0
margin_right = 40.0
margin_bottom = 78.0
text = "phase"

[node name="height_1" type="Label" parent="displayNode"]
margin_top = 80.0
margin_right = 54.0
margin_bottom = 94.0
text = "height_1"

[node name="height_2" type="Label" parent="displayNode"]
margin_top = 96.0
margin_right = 54.0
margin_bottom = 110.0
text = "height_2"

[connection signal="slide_value_changed" from="controlNode/time1" to="controlNode/time2" method="_on_time1_slide_value_changed"]
[connection signal="drag_ended" from="controlNode/time1/HSlider" to="controlNode/time1" method="_on_HSlider_drag_ended"]
[connection signal="drag_started" from="controlNode/time1/HSlider" to="controlNode/time1" method="_on_HSlider_drag_started"]
[connection signal="value_changed" from="controlNode/time1/HSlider" to="controlNode/time1" method="_on_HSlider_value_changed"]
[connection signal="drag_ended" from="controlNode/time2/HSlider" to="controlNode/time2" method="_on_HSlider_drag_ended"]
[connection signal="drag_started" from="controlNode/time2/HSlider" to="controlNode/time2" method="_on_HSlider_drag_started"]
[connection signal="drag_ended" from="controlNode/height1/HSlider" to="controlNode/height1" method="_on_HSlider_drag_ended"]
[connection signal="drag_started" from="controlNode/height1/HSlider" to="controlNode/height1" method="_on_HSlider_drag_started"]
[connection signal="value_changed" from="controlNode/height1/HSlider" to="controlNode/height1" method="_on_HSlider_value_changed"]
[connection signal="drag_ended" from="controlNode/phase/HSlider" to="controlNode/phase" method="_on_HSlider_drag_ended"]
[connection signal="drag_started" from="controlNode/phase/HSlider" to="controlNode/phase" method="_on_HSlider_drag_started"]
[connection signal="value_changed" from="controlNode/phase/HSlider" to="controlNode/phase" method="_on_HSlider_value_changed"]
